tautulli/tautulli-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert -n plex
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: tautulli
  name: tautulli
  namespace: tautulli
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tautulli
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yml convert -n plex
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: tautulli
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/America
          image: lscr.io/linuxserver/tautulli:latest
          name: tautulli
          ports:
            - containerPort: 8181
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: tautulli-claim0
      restartPolicy: Always
      volumes:
        - name: tautulli-claim0
          persistentVolumeClaim:
            claimName: tautulli-claim0
