tautulli/tautulli-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert -n plex
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: tautulli
  name: tautulli
  namespace: tautulli
spec:
  ports:
    - name: "8181"
      port: 8181
      targetPort: 8181
  selector:
    io.kompose.service: tautulli
