tautulli/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
  namespace: tautulli
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  defaultBackend:
    service:
      name: tautulli
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - tautulli
